fixed alignment of headings and images on the portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 * {
     box-sizing: border-box;
 }
+
 /*body*/
 
 body {
@@ -18,7 +19,9 @@ body {
     padding: 0;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
@@ -143,33 +146,39 @@ footer {
     bottom: 0;
 }
 
-.copyright  {
+.copyright {
     color: #ddd;
 }
 
 /*portfolio main*/
 
-.project    {
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+    }
+    
+.project {
     position: relative;
     float: left;
-    overflow: auto;
-    margin: 20px 25px;
+    margin: 10px 30px 30px 0;
 }
 
 .project img {
     width: 100%;
     border: 0 none;
-    opacity: .8;
+    opacity: .5;
 }
 
 
 .project h3 {
     position: absolute;
+    display: inline-block;    
     width: 100%;
-    text-align: centre;
+    padding: 15px;
     background: #4aaaa5;
     color: #fff;
-    padding: 15px;
+    text-align: center;
     bottom: 20px;
     border-bottom: 0;
     line-height: 30px;
@@ -177,32 +186,48 @@ footer {
     font-weight: 900;
 }
 
+input[type=submit]:hover
+
 /*contact us main*/
 
-ul#contact-form  {
- margin-bottom: 20px;
- list-style: none;
- position: relative;
- padding-left: 0;
+ul#contact-form {
+    margin-bottom: 20px;
+    list-style: none;
+    position: relative;
+    padding-left: 0;
 }
 
-#contact-form li{
+#contact-form li {
     margin-bottom: 20px;
-   }
+}
 
 label {
     font-size: 15px;
     padding-bottom: 5px;
 }
 
-label, input[type=text], input[type=email], textarea {
+label,
+input[type=text],
+input[type=email],
+textarea {
     display: block;
     width: 100%;
 }
 
-
+textarea {
+    resize: none;
+}
 ::placeholder {
     opacity: .6;
+}
 
-  }
+input[type=submit] {
+    background-color: #4aaaa5;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+}
 
+input[type=submit]:hover {
+    background-color: #666666;
+}
